Fix the colors in dark mode in the winner page #27

--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,6 @@ a:hover {
   color: #535bf2;
 }
 
-/* body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-} */
-
 /* Keep your base button style for common properties */
 button {
   border-radius: 8px;
@@ -63,13 +55,13 @@ button {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: white;
+    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    /* background-color: #f9f9f9; */
+    background-color: #f9f9f9;
   }
 }
